[fix] showing unnecessary horizontal scrollbar.

--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -35,6 +35,7 @@ $main-fclr: #fff0f5;
 
 html{
     height: 100%;
+    overflow-x: hidden;
 }
 body{
     height: 100%;
